--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+
+
 *{
     margin : 0rem;
     padding : 0rem;
@@ -10,17 +12,18 @@
     --secondaryColor : #414B70;
     --boxColor : #091642;
     --btnColor : #206FF4;
-}
+} 
 
 body{
     display: flex;
     justify-content: center;
     align-items : center;
     height : 100vh;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .mainContainer{
-    height: 98vh;
+    height: 92vh;
     background-color : var(--mainContainer-bck);
     width : 40%;
     display : flex;
@@ -49,13 +52,26 @@ body{
 }
 
 .mainContainer .displayArea .box{
-    height: 2.8rem;
+    height: 3rem;
 }
 
 .mainContainer .displayArea .minibox{
-    height : 2.4rem;
+    height : 2.5rem;
 }
 
+.mainContainer .displayArea .minibox{
+    display: flex;
+    flex-direction : row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.mainContainer .displayArea .minibox p{
+    color : var(--primaryColor);
+    font-size: 0.8rem;
+    display: inline-block;
+    margin-left : 0.8rem;
+}
 
 .mainContainer .generateBtn{
     width: 95%;
@@ -68,4 +84,38 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0.35rem;
+} 
+
+/* .toggle__input{
+    display: none;
 }
+
+.toggle__fill{
+    position: relative;
+    width : 40px;
+    height : 20px;
+    border-radius : 10px;
+    background-color: green;
+    display: inline-block;
+    transition: background-color 0.2s;
+}
+
+.toggle__fill::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height : 20px;
+    width: 20px;
+    background: violet;
+    border-radius: 100%;
+    transition: transform 0.2s;
+}
+
+.toggle__input:checked ~ .toggle__fill{
+    background-color : red;
+}
+
+.toggle__input:checked ~ .toggle__fill::after{
+    transform: translateX(20px);
+} */
