--- a/index.css
+++ b/index.css
@@ -12,6 +12,8 @@
     --secondaryColor : #414B70;
     --boxColor : #091642;
     --btnColor : #206FF4;
+    --toggleBtnColor : #14244C;
+    --toggleCircleColor : #B7BDC7;
 } 
 
 body{
@@ -86,36 +88,41 @@ body{
     margin-bottom: 0.35rem;
 } 
 
-/* .toggle__input{
-    display: none;
+.minibox .strength{
+    margin-right : 0.65rem;
 }
 
-.toggle__fill{
-    position: relative;
-    width : 40px;
-    height : 20px;
+.minibox .strength .toggle__input{
+    display : none;
+}
+
+.minibox .strength .toggle__fill{
+    background-color: var(--toggleBtnColor);
+    height : 15px;
+    width : 30px;
     border-radius : 10px;
-    background-color: green;
     display: inline-block;
+    position: relative;
     transition: background-color 0.2s;
 }
 
 .toggle__fill::after{
     content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height : 20px;
-    width: 20px;
-    background: violet;
+    position : absolute;
+    top : 0;
+    left : 0;
+    height : 15px;
+    width : 15px;
+    background-color: var(--toggleCircleColor);
+    transition: background-color 0.2s;
     border-radius: 100%;
-    transition: transform 0.2s;
 }
 
 .toggle__input:checked ~ .toggle__fill{
-    background-color : red;
+    background-color: var(--btnColor);
 }
 
 .toggle__input:checked ~ .toggle__fill::after{
-    transform: translateX(20px);
-} */
+    transform: translateX(15px);
+    background-color: white;
+}
