--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@
     --btnColor : #206FF4;
     --toggleBtnColor : #14244C;
     --toggleCircleColor : #B7BDC7;
+    --bodyBackgroundColor : #B4C5DD;
 } 
 
 body{
@@ -22,6 +23,7 @@ body{
     align-items : center;
     height : 100vh;
     font-family:Arial, Helvetica, sans-serif;
+    background-color: var(--bodyBackgroundColor);
 }
 
 .mainContainer{
@@ -88,6 +90,10 @@ body{
     margin-bottom: 0.35rem;
 } 
 
+.mainContainer .generateBtn:hover{
+    cursor: pointer;
+}
+
 .minibox .strength{
     margin-right : 0.65rem;
 }
@@ -114,7 +120,7 @@ body{
     height : 15px;
     width : 15px;
     background-color: var(--toggleCircleColor);
-    transition: background-color 0.2s;
+    transition: transform 0.2s;
     border-radius: 100%;
 }
 
