--- a/index.css
+++ b/index.css
@@ -122,10 +122,17 @@ body{
 
 .minibox .strength .toggle__fill{
     background-color: var(--toggleBtnColor);
+    position: relative;
     height : 15px;
     width : 30px;
-    border-radius : 10px;
-    display: inline-block;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border-radius : 40px;
     transition: background-color 0.2s;
+}
+
+.minibox .strength .toggle__fill i{
+    color : var(--toggleCircleColor);
+    font-size : 0.9rem;
 }
