--- a/index.css
+++ b/index.css
@@ -55,6 +55,14 @@ body{
     width: 100%;
 }
 
+#displayOutput{
+    width : 100%;
+    color : var(--primaryColor);
+    word-wrap: break-word;
+    text-align: center;
+    vertical-align: middle;
+}
+
 .mainContainer .displayArea .box{
     height : 3rem;
 }
@@ -134,6 +142,6 @@ body{
 .minibox .strength .toggle__fill .icon{
     height : 15px;
     width : 15px;
-    background-color : var(--primaryColor);
+    background-color : var(--toggleCircleColor);
     border-radius: 100%;
 }
